syntax = "proto2";
option optimize_for = SPEED;
option cc_generic_services = false;

package NickSV.Chat;

message UserName
{
    optional string text = 1;
}